[tool.poetry]
name = "online-esn"
version = "0.1.0"
description = ""
authors = ["= <=>"]

[tool.poetry.dependencies]
python = "==3.9"
numpy = "^1.22.4"
torch = "^1.11.0"
black = "^22.3.0"
mypy = "^0.960"
isort = "^5.10.1"
matplotlib = "^3.5.2"
scipy = "^1.8.1"
scikit-learn = "^1.1.1"
librosa = "^0.9.1"
ipykernel = "^6.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
